# dev-utils

./: README.md
configs/python/: pre-commit.yml  pyproject.toml
scripts/: init_dev_utils.sh  init_server.sh
snippets/vscode/: react_start.json
